and callRemote.
* Added a jsonrpc module for abstracting base-classes and removing redundancy
between the three JSON-RPC implementations.
* Added a BaseProxy class.
* Import cleanup.
* Moved more common methods into the base query factory class.
* Created a BaseSubhandler subclass for http and netstring RPC classes.
* Removed session code from netstring RPC test.

2009.11.20

* Added clean.sh admin script.
* Cleaned up TODO file.
* Updated meta file with more data and incremented the version to 0.3.
* Added utils subpackage.
* Updated setup.py to use the new utils subpackage.
* Added docs.
* Updated README.
* Cleaned up lots of unused imports.
* Formatting tweaks.
* Added a call to strip for the help-string-returning methods.
* Added a maxLength attribute to QueryFactory for custom settings by users.
* Updated proxy to instantiate QueryFactory with an optional maxLength
override.
* Updated history file.
* Cleaned up examples.
* Added an admin script for testing examples.
* Updated the commit script to run the exmaple tests.
* Added missing error handling in commit script.
* Added PYTHONPATH to example runner commands.
* Removed PYTHONPATH from admin/defs.sh.
* Removed debugging echo statement from commit.sh.
* Removed manual PYTHONPATH setting in example runner.
* Formatting tweaks.
* Updated TODO and README.
* Added admin upload script.
* Added placeholders for version spec files.
* Added missing deferred returns in two tests.
* Added testing helper subpackage.
* Added doctest runner.
* Added manifest file.
* Updated the commit script to run the doctest runner.
* Added headings to the spec files.
* Added request info to the specs.
* Added versioned request functions to jsonrpclib.py and updated the
ServerProxy with a version-sensitive dispatcher.
* Removed non-pertinent sections from pre-version 1 spec.

2008.11.10

* Added a test for None/null.
* Added a serializer for Python datetime -> JSON.
* Updated the version.